# mergelog-rs

./: .gitignore  Cargo.toml  Containerfile  Makefile  README.md  justfile
.github/workflows/: release-container.yml  release.yml
docs/: mergelog-rs.1  mergelog-rs.md
src/: caddy.rs  caddy_tests.rs  main.rs  merge.rs  merge_tests.rs  parser.rs  reader.rs  stats.rs
test-data/: gen.py
